--- a/templateCV.html
+++ b/templateCV.html
@@ -33,7 +33,7 @@
         }
 
         .part1-left-container {
-            width: 34%;
+            width: 30%;
             height: 1020px;
             background-color: white;
             box-shadow: -2px -2px 10px rgb(88, 79, 79);
@@ -46,7 +46,7 @@
 
         .profile-name {
             position: absolute;
-            color: black;
+            color: white;
             margin-top: -50px;
             margin-left: 10px;
             font-size: 19px;
@@ -141,7 +141,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 63.5%;
+            width: 68%;
             height: 1018px;
 
         }
@@ -242,12 +242,12 @@
     <div class="page-container">
         <div class="part1-left-container">
             <div class="profile-image">
-                <img src="images/hoda.png" alt="Mahmoud Elsebaey">
-                <div class="profile-name">
+                <img src="images/7.png" alt="Mahmoud Elsebaey">
+               <!-- <div class="profile-name">
                     <h4><i class="fab fa-wolf-pack-battalion"
-                            style="margin-right: 10px; font-size: 25px; color: black;"></i>Mahmoud
+                            style="margin-right: 10px; font-size: 25px; color: white;"></i>Mahmoud
                         Elsebaey</h4>
-                </div>
+                </div>-->
             </div>
             <div class="enfo-contacts">
                 <ul>
