--- a/templateCV.html
+++ b/templateCV.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Icons/fontawesome-free-5.15.4-web/css/all.css">
     <link rel="shortcut icon" type="image" href="images/template icon.png">
-    <title>Document</title>
+    <title>Template CV</title>
     <style>
         * {
             padding: 0;
