--- a/templateCV.html
+++ b/templateCV.html
@@ -149,6 +149,7 @@
         .section-top-container {
             width: 100%;
             height: 550px;
+            line-height: 2.5;
             background-color: white;
             box-shadow: -2px -2px 10px rgb(88, 79, 79);
         }
@@ -157,7 +158,7 @@
             width: 95%;
             height: 95%;
             margin: 1.5% 2.5%;
-            line-height: 2.5;
+
             /* border: 1px solid rebeccapurple;*/
         }
 
@@ -194,6 +195,7 @@
         .section-bottom-container {
             width: 100%;
             height: 450px;
+            line-height: 2.3;
             background-color: white;
             box-shadow: -2px -2px 10px rgb(88, 79, 79);
         }
@@ -202,7 +204,7 @@
             width: 95%;
             height: 95%;
             margin: 1.5% 2.5%;
-            line-height: 2.3;
+
             /*border: 1px solid rebeccapurple;*/
         }
 
@@ -235,6 +237,157 @@
             margin-right: 5px;
 
         }
+
+        /*********************** Tablet Diplay **********************/
+
+        @media (max-width: 845px) {
+            .page-container {
+                display: flex;
+                /*  flex-direction:column;*/
+                justify-content: space-around;
+                margin: 1%;
+            }
+
+            .part1-left-container {
+                width: 40%;
+                height: 1020px;
+            }
+
+            .part2-right-container {
+                width: 58%;
+                height: 1018px;
+
+            }
+
+            .section-top-container {
+                height: 580px;
+                line-height: 2.2;
+            }
+
+            .section-bottom-container {
+                height: 420px;
+                line-height: 1.8;
+            }
+        }
+
+        @media (max-width: 665px) {
+
+            .page-container {
+                font-size: 90%;
+            }
+
+            .enfo-contacts,
+            .skills-icon,
+            .languages-icon {
+                line-height: 2.6;
+            }
+
+            .section-top-container {
+                height: 595px;
+                line-height: 2.8;
+            }
+
+            .section-bottom-container {
+                height: 410px;
+                line-height: 2.2;
+            }
+        }
+
+ @media (max-width: 598px) {
+
+            .page-container {
+                font-size: 90%;
+            }
+
+            .enfo-contacts,
+            .skills-icon,
+            .languages-icon {
+                line-height: 2.7;
+            }
+
+            .section-top-container {
+                height: 595px;
+                line-height: 2.3;
+            }
+
+            .section-bottom-container {
+                height: 410px;
+                line-height: 1.9;
+            }
+        }
+
+        /********************** MObile Display ******************************/
+        @media (max-width: 555px) {
+            .page-container {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                margin: 1%;
+                font-size: 100%;
+            }
+
+            .part1-left-container {
+                width: 100%;
+                height: 1020px;
+            }
+
+            .enfo-contacts,
+            .skills-icon,
+            .languages-icon {
+                line-height: 2.5;
+            }
+
+            .part2-right-container {
+                width: 100%;
+                height: 1100px;
+                margin-top: 15px;
+
+            }
+
+            .section-top-container {
+                height: 630px;
+                line-height: 2.5;
+            }
+
+            .section-bottom-container {
+                height: 460px;
+                line-height: 2.2;
+            }
+
+            footer {
+                line-height: 1.1;
+                height: 150px;
+            }
+
+            footer ul {
+                display: flex;
+                margin-left: 29%;
+            }
+
+            footer li {
+                margin-top: 20px;
+            }
+
+            @media (max-width:385px) {
+                .page-container {
+                    font-size: smaller;
+                }
+                .enfo-contacts,
+            .skills-icon,
+            .languages-icon {
+                line-height: 2.8;
+            }
+            .section-top-container {
+                height: 630px;
+                line-height: 3.2;
+            }
+
+                .section-bottom-container {
+                    height: 460px;
+                    line-height:2.8;
+                }
+            }
+        }
     </style>
 </head>
 
@@ -243,7 +396,7 @@
         <div class="part1-left-container">
             <div class="profile-image">
                 <img src="images/7.png" alt="Mahmoud Elsebaey">
-               <!-- <div class="profile-name">
+                <!-- <div class="profile-name">
                     <h4><i class="fab fa-wolf-pack-battalion"
                             style="margin-right: 10px; font-size: 25px; color: white;"></i>Mahmoud
                         Elsebaey</h4>
@@ -253,7 +406,7 @@
                 <ul>
                     <li><i class="fas fa-briefcase"></i>Designer</li>
                     <li><i class="fas fa-home"></i>Egypt,AR</li>
-                    <li><i class="fas fa-envelope"></i>Mahmoud@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i>7ODA@mail.com</li>
                     <li><i class="fas fa-phone"></i>+6291215925</li>
                 </ul>
             </div>
